--- a/Imputation_Using_SAITS_Model/Min_to_Hrly_TimeStamp.ipynb
+++ b/Imputation_Using_SAITS_Model/Min_to_Hrly_TimeStamp.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "# ===== Colab: process GPS VTEC by minute & hour (all sheets) =====\n",
+        "# ===== process GPS VTEC by minute & hour (all sheets) =====\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from google.colab import files\n",
