--- a/Imputation_Using_SAITS_Model/Plotting_EventMonths.ipynb
+++ b/Imputation_Using_SAITS_Model/Plotting_EventMonths.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "# Plotting Event-Months of NEQUICK Model vs Real Data (SAITS Imputed) with Accuracy Metrics   final\n",
+        "# Plotting Event-Months of NEQUICK Model vs Real Data (SAITS Imputed) with Accuracy Metrics  \n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
