--- a/Imputation_Using_SAITS_Model/Plotting_Phase.ipynb
+++ b/Imputation_Using_SAITS_Model/Plotting_Phase.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "#Plotting Phase #Final code for imputed unavailble data using SAITS.#final\n",
+        "#Plotting Phase #Final code for imputed unavailble data using SAITS \n",
         "\n",
         "import os\n",
         "import numpy as np\n",
