--- a/Imputation_Using_SAITS_Model/Traning_Model.ipynb
+++ b/Imputation_Using_SAITS_Model/Traning_Model.ipynb
@@ -22,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np   #final\n",
+        "import numpy as np   \n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "from pypots.imputation import SAITS\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
-        "!pip install xlsxwriter #final\n",
+        "!pip install xlsxwriter \n",
         "\n",
-        "# Training SAITS model #Final\n",
+        "# Training SAITS model \n",
         "\n",
         "import os\n",
         "import numpy as np\n",
